2004-11-23 Mikhail Khodjaiants
	The enablement of the step actions is calculated in the UI thread. This causes 
	the UI locks for slow or unresponsive targets. Use the cached stack frames to 
	calculate the enablement instead of requesting gdb.
	* CThread.java

2004-11-22 Mikhail Khodjaiants
	Check if the pointer value is not null before pass it to the address factory.
	* CValue.java
 
2004-11-18 Mikhail Khodjaiants
	Worker threads can try to evaluate expressions on the stack frames that 
	have already been disposed. A flag is added to identify that the stack 
	frame is disposed.
	* CStackFrame.java

2004-11-19 Alain Magloire

	Clear the confusion about sublist of stackframes.
	PR 78611

	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIStackFrame.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIThread.java
	* src/org/eclipse/cdt/debug/internal/model/CThread.java

2004-11-17 David Inglis
	
	Change debug target to use IBinaryObject instead of IBinaryExecutable
	
	* src/org/eclipse/cdt/debug/core/CDIDebugModel.java
	* src/org/eclipse/cdt/debug/core/ICDIDebugger.java
	* src/org/eclipse/cdt/debug/core/model/IExecFileInfo.java
	* src/org/eclipse/cdt/debug/internal/core/CDebugAdapter.java
	* src/org/eclipse/cdt/debug/internal/core/model/CDebugTarget.java
	
2004-11-16 Alain Magloire
	Optimize things by providing a new method
	ICDIRegisterGroup.hasRegisters();
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIRegisterGroup.java
	* src/org/eclipse/cdt/debug/internal/core/model/CRegisterGroup.java

2004-11-15 Mikhail Khodjaiants
	Fix for bug 78604: Disassembly causes Java exception when disassembling beyond fn(?).
	Added the "getAddressFactory" method to the "IDisassembly" interface.
	* IDisassembly.java
	* Disassembly.java

2004-11-15 Mikhail Khodjaiants
	Batch breakpoint updates in one job.
	* CBreakpointManager.java

2004-11-12 Mikhail Khodjaiants
	Apply the breakpoint's condition changes to the associated gdb breakpoint 
	only if there are differences.